--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webpack project",
   "main": "index.js",
   "scripts": {
-    "build": "rd /s /q dist && webpack --mode development",
+    "build": "rimraf dist/* && webpack --mode development",
     "dev": "webpack-dev-server --open --watch"
   },
   "repository": {
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "core-js": "^3.6.5"
+    "core-js": "^3.6.5",
+    "rimraf": "^3.0.2"
   }
 }
