--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist/* && webpack --mode development",
-    "dev": "webpack-dev-server --open --watch"
+    "prod": "rimraf dist/* && webpack --mode production",
+    "dev": "webpack-dev-server --open --watch",
+    "predeploy": "npm run prod",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,7 @@
     "css-loader": "^5.0.0",
     "cssnano": "^4.1.10",
     "file-loader": "^6.1.1",
+    "gh-pages": "^3.1.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.2.1",
